Changes for Curl Scripts and Style Connected the scripts/index.js to auth/events.js by creating authEvents constant, which requires the auth/events.js file. Added place holder style to the index.scss file, making the background pink and including div layout setup (without solid lines). Added 9 divs for the game-board to the index.html file. Main div class is"game-board", and each div contains data-id. The data-id of the first div starts at 0 (like an array) and the last div data-id is set to 8. Added curls scripts for scripts/change-password files.

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -1,2 +1,61 @@
 $icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
 @import '~bootstrap-sass/assets/stylesheets/bootstrap';
+
+* {
+  padding: 0;
+  margin: 0;
+  border: 0;
+}
+
+body {
+  background-color: pink;
+  background-attachment: fixed;
+  background-size: 100% auto;
+}
+
+.blended_grid {
+  display: block;
+  width: 1000px;
+  overflow: auto;
+  margin: 50px auto 0;
+}
+
+.pageHeader {
+  background-color: rgba(0, 0, 0, 0.5);
+  float: left;
+  clear: none;
+  height: 200px;
+  width: 1000px;
+}
+
+.pageLeftMenu {
+  background-color: rgba(0, 0, 0, 0.5);
+  float: left;
+  clear: none;
+  height: 600px;
+  width: 160px;
+}
+
+.pageContent {
+  background-color: rgba(0, 0, 0, 0.5);
+  float: left;
+  clear: none;
+  height: 600px;
+  width: 680px;
+}
+
+.pageRightMenu {
+  background-color: rgba(0, 0, 0, 0.5);
+  float: left;
+  clear: none;
+  height: 600px;
+  width: 160px;
+}
+
+.pageFooter {
+  background-color: rgba(0, 0, 0, 0.5);
+  float: left;
+  clear: none;
+  height: 100px;
+  width: 1000px;
+}
