--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -112,7 +112,7 @@ html {
 
 /* Using box shadows to create 3D effects */
 #game-board {
-	width: 300px;
+	width: 275px;
 	height: auto;
 
 	margin: 100px auto;
@@ -128,15 +128,14 @@ html {
 /* Inset shadow on the screen to create indent */
 .top .screen {
 	height: 40px;
-	width: 212px;
-
-	float: left;
-
+	width: 225px;
 	padding: 0 10px;
 
 	background: rgba(0, 0, 0, 0.2);
 	border-radius: 3px;
 	box-shadow: inset 0px 4px rgba(0, 0, 0, 0.2);
+
+	float: left;
 
 	/* Typography */
 	font-size: 17px;
@@ -148,12 +147,12 @@ html {
 }
 
 /* Clear floats */
-.keys, .top {
+.gamePlay, .top {
   overflow: hidden;
 }
 
 /* Applying same to the keys */
-.keys span {
+.gamePlay span {
 	float: left;
 	position: relative;
 	top: 0;
@@ -179,14 +178,14 @@ html {
 }
 
 /* hover effects */
-.keys span:hover {
+.gamePlay span:hover {
 	background: #9c89f6;
 	box-shadow: 0px 4px #6b54d3;
 	color: white;
 }
 
 /* Simulating "pressed" effect on active state of the keys by removing the box-shadow and moving the keys down a bit */
-.keys span:active {
+.gamePlay span:active {
 	box-shadow: 0px 0px #6b54d3;
 	top: 4px;
 }
