--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -62,15 +62,6 @@ h1 {
   height: 400px;
 }
 
-/*aside {*/
-/*  width: 20%;*/
-/*  margin: 0 20px 0 10px;*/
-/*  padding: 15px;*/
-/*  background-color: yellow;*/
-/*  height: 400px;*/
-/*  float: left;*/
-/*}*/
-
 main {
   width: 75%;
   float: left;
@@ -80,6 +71,7 @@ p.copyright {
   clear: both;
   text-align: center;
   margin-top: 50px;
+  padding-top: 10px;
 }
 
 footer {
@@ -90,19 +82,7 @@ footer {
   margin-top: 10px;
 }
 
-
-/*Game Board*/
-
-/* Basic reset */
-// * {
-// 	margin: 0;
-// 	padding: 0;
-// 	box-sizing: border-box;
-//
-// 	/* font styling */
-// 	font: bold 14px Arial, sans-serif;
-// }
-p input {
+p input, input[type=submit] {
   align-items: flex-start;
   text-align: center;
   cursor: default;
@@ -115,16 +95,9 @@ p input {
   border-color: buttonface;
   border-image: initial;
 }
-/* BG gradient */
-// html {
-// 	height: 100%;
-// 	background: white;
-// 	background: radial-gradient(circle, #fff 20%, #ccc);
-// 	background-size: cover;
-// }
 
-/* Using box shadows to create 3D effects */
-#game-board {
+/* Using box shadows for 3D effect */
+#game-area {
 	width: 275px;
 	height: auto;
 
@@ -150,7 +123,7 @@ p input {
 
 	float: left;
 
-	/* Typography */
+	/* Text */
 	font-size: 17px;
 	line-height: 40px;
 	color: white;
@@ -160,12 +133,12 @@ p input {
 }
 
 /* Clear floats */
-.gameSquare, .top {
+.game-board, .top {
   overflow: hidden;
 }
 
-/* Applying same to the keys */
-.gameSquare span {
+
+.game-board span {
 	float: left;
 	position: relative;
 	top: 0;
@@ -191,14 +164,14 @@ p input {
 }
 
 /* hover effects */
-.gameSquare span:hover {
+.game-board span:hover {
 	background: #9c89f6;
 	box-shadow: 0px 4px #6b54d3;
 	color: white;
 }
 
 /* Simulating "pressed" effect on active state of the keys by removing the box-shadow and moving the keys down a bit */
-.gameSquare span:active {
+.game-board span:active {
 	box-shadow: 0px 0px #6b54d3;
 	top: 4px;
 }
